--- a/WindowsUIWalla/ManageWalla/MainTwo.xaml
+++ b/WindowsUIWalla/ManageWalla/MainTwo.xaml
@@ -10,7 +10,7 @@
         <ResourceDictionary Source="WallaControlTemplates.xaml" />
     </Window.Resources>
 
-    <Grid x:Name="gridLeft" Margin="2,2,0,0">
+    <Grid x:Name="gridLeft" Margin="2,2,0,0" Background="#FFE3E6D2">
         <Grid.RowDefinitions>
             <RowDefinition Height="40" />
             <RowDefinition Height="40" />
@@ -296,7 +296,7 @@
             </StackPanel>
         </Grid>
 
-        <RadioButton x:Name="radGallery" GroupName="MainSection" Grid.Column="1" Grid.Row="5" Checked="radGallery_Checked"  Template="{StaticResource templateRadioButtonTest}" Style="{StaticResource styleMainSectionRadioButton}" Background="#FFFD91C7">
+        <RadioButton x:Name="radGallery" GroupName="MainSection" Grid.Column="1" Grid.Row="5" Checked="radGallery_Checked"  Template="{StaticResource templateRadioButtonTest}" Style="{StaticResource styleMainSectionRadioButton}" Background="#FFFFC6C6">
             <DockPanel LastChildFill="True">
                 <Button x:Name="cmdGalleryRefresh" DockPanel.Dock="Right" Style="{StaticResource styleButton}" Template="{StaticResource templateButton}" Click="cmdGalleryRefresh_Click">
                     <Button.Content>
@@ -308,13 +308,13 @@
             </DockPanel>
         </RadioButton>
 
-        <DockPanel x:Name="panGalleryUnavailable" Grid.Column="1" Grid.Row="6" VerticalAlignment="Stretch" Background="#CCFD91C7" Margin="2" Visibility="Collapsed">
+        <DockPanel x:Name="panGalleryUnavailable" Grid.Column="1" Grid.Row="6" VerticalAlignment="Stretch" Background="#FFF0769C" Margin="2" Visibility="Collapsed">
             <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
                 <TextBlock Text="Galleries not loaded..." TextAlignment="Center" />
             </StackPanel>
         </DockPanel>
 
-        <Grid x:Name="gridGallery" Background="#CCFD91C7" Grid.Column="1" Grid.Row="6" >
+        <Grid x:Name="gridGallery" Background="#FFFFC6C6" Grid.Column="1" Grid.Row="6" Margin="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <!-- wrap galleries -->
@@ -337,7 +337,7 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100" />
-                <ColumnDefinition Width="200" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
             <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" HorizontalScrollBarVisibility="Disabled">
@@ -535,15 +535,15 @@
 
         <Grid x:Name="gridRight" Margin="0,0,0,0" Grid.Column="2" Grid.Row="0" Grid.RowSpan="9">
             <Grid.RowDefinitions>
-                <RowDefinition Height="40" />
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="2*" />
+                <RowDefinition Height="2*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="250"/>
             </Grid.ColumnDefinitions>
 
-            <DockPanel x:Name="panGridRightHeader" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="2,2,2,2" Background="#FFA9C4FF" HorizontalAlignment="Stretch" LastChildFill="True">
+            <DockPanel x:Name="panGridRightHeader" Grid.Column="0" Grid.Row="0" Visibility="Collapsed" Grid.ColumnSpan="2" Margin="2,2,2,2" Background="#FFA9C4FF" HorizontalAlignment="Stretch" LastChildFill="True">
 
                 <Slider x:Name="sldImageSize" DockPanel.Dock="Left" Ticks="1, 2, 3, 4, 5" HorizontalAlignment="Left" VerticalAlignment="Center"
                             Value="130"
@@ -573,34 +573,35 @@
 
             </DockPanel>
 
-            <Grid x:Name="gridGallerySelection" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Visibility="Collapsed">
+            <Grid x:Name="gridGallerySelection" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Visibility="Visible">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="40" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="25"/>
                     <ColumnDefinition Width="3*"/>
                     <ColumnDefinition Width="20"/>
                     <ColumnDefinition Width="3*"/>
                 </Grid.ColumnDefinitions>
 
-                <Label Content="Categories to include" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="0" />
-
-                
+                <Label Content="Categories to include" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="0" Foreground="#FF408383" FontSize="12" />
 
 
-                <ScrollViewer x:Name="scrollGalleryCategoryInclude" VerticalScrollBarVisibility="Auto" Grid.Column="0" Grid.Row="1" Margin="4">
-                    <TreeView x:Name="treeGalleryCategoryView" Background="#FFFFF4F4" >
+
+                <ScrollViewer x:Name="scrollGalleryCategoryInclude" VerticalScrollBarVisibility="Auto" Grid.Column="0" Grid.Row="1" Margin="2,0,0,2">
+                    <TreeView x:Name="treeGalleryCategoryView" Background="#FFFFC6C6" BorderThickness="0">
                     </TreeView>
                 </ScrollViewer>
 
-                <Label x:Name="lblGallerySelectionAndOr" Content="AND" Grid.Column="1" Grid.Row="1" Margin="4" VerticalContentAlignment="Center"  />
+                <StackPanel Grid.Column="1" Grid.Row="1" Margin="0" VerticalAlignment="Center" >
+                    <Label x:Name="lblGallerySelectionAndOr" Content="AND"   HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" Foreground="#FF408383" FontSize="12" />
+                </StackPanel>
 
-                <Label Content="Tags to include" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="0" />
-                
-                <ScrollViewer x:Name="scrollGalleryTagInclude" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" Grid.Column="2" Grid.Row="1">
+                <Label Content="Tags to include" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="0" Foreground="#FF408383" FontSize="12" />
+
+                <ScrollViewer x:Name="scrollGalleryTagInclude" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" Grid.Column="2" Grid.Row="1" Background="#FFFFC6C6" Margin="0,0,0,2">
                     <ListBox Style="{DynamicResource TagListStyle}" 
                             		x:Name ="lstGalleryTagListInclude" 
                             		ScrollViewer.VerticalScrollBarVisibility="Auto"
@@ -609,9 +610,9 @@
                     </ListBox>
                 </ScrollViewer>
 
-                <Label Content="Tags to exclude" Grid.Column="4" Grid.Row="0" Margin="4" VerticalContentAlignment="Center"  />
-                
-                <ScrollViewer x:Name="scrollGalleryTagExclude" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" Grid.Column="4" Grid.Row="1">
+                <Label Content="Tags to exclude" Grid.Column="4" Grid.Row="0" Margin="4" VerticalContentAlignment="Center" Foreground="#FF408383" FontSize="12" />
+
+                <ScrollViewer x:Name="scrollGalleryTagExclude" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" Grid.Column="4" Grid.Row="1" Margin="0,0,2,2" Background="#FF999898">
                     <ListBox Style="{DynamicResource TagListStyle}" 
                             		x:Name ="lstGalleryTagListExclude" 
                             		ScrollViewer.VerticalScrollBarVisibility="Visible"
@@ -623,6 +624,21 @@
 
             </Grid>
 
+            <StackPanel x:Name="panGalleryFormatting" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Left">
+                <Label FontSize="12" Content="Gallery Display Type"  Background="Transparent" Foreground="#FF408383" />
+                <ComboBox x:Name="cmbGalleryPresentationType" Margin="4" Background="{x:Null}" SelectedIndex="0" Width="150" >
+                    <ComboBoxItem Content="Standard"/>
+                    <ComboBoxItem Content="Lightbox"/>
+                </ComboBox>
+                <Label FontSize="12" Content="Gallery Style"  Background="Transparent" Foreground="#FF408383" />
+                <ComboBox x:Name="cmbGalleryStyleType" Margin="4" Background="{x:Null}" SelectedIndex="0" Width="150" >
+                    <ComboBoxItem Content="Dark Grey"/>
+                    <ComboBoxItem Content="Light Grey"/>
+                    <ComboBoxItem Content="Sky Blue"/>
+                    <ComboBoxItem Content="Black and White"/>
+                </ComboBox>
+            </StackPanel>
+            
             <ListBox Grid.Column="0" Grid.Row="1" Style="{DynamicResource PhotoListStyle}" 
                             		    x:Name ="lstImageMainViewerList" 
                             		    ItemsSource="{Binding Mode=OneWay, Source={StaticResource imageMainViewerListKey}}"
