--- a/WindowsUIWalla/ManageWalla/MainTwo.xaml
+++ b/WindowsUIWalla/ManageWalla/MainTwo.xaml
@@ -123,7 +123,7 @@
                     <Image Source="Icons/agent.gif" Height="28" />
                 </Button.Content>
             </Button>
-            <Label x:Name="lblFotoWalla" FontSize="16" Content="FotoWalla" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" Foreground="#FF408383" />
+            <Label x:Name="lblFotoWalla" FontSize="16" Content="FotoWalla" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" Foreground="#FF408383" MouseUp="lblFotoWalla_MouseUp" />
         </DockPanel>
 
         <RadioButton x:Name="radCategory" GroupName="MainSection" Grid.Column="1" Grid.Row="1" Checked="radCategory_Checked" Template="{StaticResource templateRadioButtonTest}" Style="{StaticResource styleMainSectionRadioButton}" Background="#FFFFFA92">
@@ -655,10 +655,60 @@
 
                         <Label Content="Categories to include" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" Foreground="#FF408383" FontSize="12"  />
 
+                        <!-- ItemsSource="{Binding Mode=TwoWay, Path=CategoryItems}" DataContext="{DynamicResource galleryCategoryModelKey}" 
+                        ItemsSource="{Binding Mode=TwoWay, Path= CategoryItems}"  SelectedIndex="{Binding selectionIndex}" 
+                        <TextBlock Text="{Binding name}" ToolTip="{Binding tooltip}"/>
+                        -->
+                        
+                        
                         <ScrollViewer  x:Name="scrollGalleryCategoryInclude" VerticalScrollBarVisibility="Auto" Grid.Column="0" Grid.Row="2" Margin="2,0,0,2">
-                            
-                            
-                            
+
+                            <TreeView x:Name="treeGalleryCategoryView" Background="#FFFFC6C6" BorderThickness="0" >
+                                <TreeView.ItemTemplate>
+                                    <HierarchicalDataTemplate>
+                                            <StackPanel Orientation="Horizontal">
+                                                <ComboBox SelectionChanged="GalleryCategory_SelectionChanged">
+                                                    <ComboBoxItem> - </ComboBoxItem>
+                                                    <ComboBoxItem> Y </ComboBoxItem>
+                                                    <ComboBoxItem>ALL</ComboBoxItem>
+                                                </ComboBox>
+                                                <TextBlock Text="" ToolTip=""/>
+                                            </StackPanel>
+                                    </HierarchicalDataTemplate>
+                                </TreeView.ItemTemplate>
+                                
+                                <TreeView.ItemContainerStyle>
+
+                                    <Style TargetType="TreeViewItem">
+
+                                        <Setter Property="IsExpanded" Value="True"/>
+                                        <Setter Property="IsEnabled" Value="True"/>
+                                    </Style>
+
+                                </TreeView.ItemContainerStyle>
+
+
+                                <!--
+                                <TreeView.Resources>
+                                    <Style TargetType="{x:Type TreeViewItem}">
+                                        <Setter Property="HeaderTemplate">
+                                            <Setter.Value>
+                                                <DataTemplate>
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <CheckBox Name="chk" Margin="2" >
+                                                        </CheckBox>
+                                                        <TextBlock Text="{Binding Path=Name}"></TextBlock>
+                                                    </StackPanel>
+                                                </DataTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </TreeView.Resources>
+-->
+
+                            </TreeView>
+                        </ScrollViewer>
+
                             <!--
                             <local:MultiSelectTreeView
                                 
@@ -679,7 +729,6 @@
                             </local:MultiSelectTreeView>
 -->
                             
-                        </ScrollViewer>
 
                         <StackPanel Grid.Column="1" Grid.Row="2" Margin="0" VerticalAlignment="Center" >
                             <Label x:Name="lblGallerySelectionAndOr" Content="AND"   HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" Foreground="#FF408383" FontSize="12" />
